// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppSidebar > matches snapshot for admin user 1`] = `
<div>
  <div
    class="top-0 h-screen z-50 bg-[#0B1320]/95 backdrop-blur"
    collapsible="icon"
    data-testid="sidebar"
  >
    <div
      data-testid="sidebar-content"
    >
      <div
        data-testid="sidebar-group"
      >
        <ul
          data-testid="sidebar-menu"
        >
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="true"
              data-testid="sidebar-menu-button"
              title="Home"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Home
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Browse Stocks"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/browse"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trending-up h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 7h6v6"
                  />
                  <path
                    d="m22 7-8.5 8.5-5-5L2 17"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Browse Stocks
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Cryptocurrency"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/crypto"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-bitcoin h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.767 19.089c4.924.868 6.14-6.025 1.216-6.894m-1.216 6.894L5.86 18.047m5.908 1.042-.347 1.97m1.563-8.864c4.924.869 6.14-6.025 1.215-6.893m-1.215 6.893-3.94-.694m5.155-6.2L8.29 4.26m5.908 1.042.348-1.97M7.48 20.364l3.126-17.727"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Cryptocurrency
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Data Explorer"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/explorer"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Data Explorer
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Custom Analysis"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/custom"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calculator h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="2"
                    width="16"
                    x="4"
                    y="2"
                  />
                  <line
                    x1="8"
                    x2="16"
                    y1="6"
                    y2="6"
                  />
                  <line
                    x1="16"
                    x2="16"
                    y1="14"
                    y2="18"
                  />
                  <path
                    d="M16 10h.01"
                  />
                  <path
                    d="M12 10h.01"
                  />
                  <path
                    d="M8 10h.01"
                  />
                  <path
                    d="M12 14h.01"
                  />
                  <path
                    d="M8 14h.01"
                  />
                  <path
                    d="M12 18h.01"
                  />
                  <path
                    d="M8 18h.01"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Custom Analysis
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Dashboard"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/displays"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-layout-dashboard h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="9"
                    rx="1"
                    width="7"
                    x="3"
                    y="3"
                  />
                  <rect
                    height="5"
                    rx="1"
                    width="7"
                    x="14"
                    y="3"
                  />
                  <rect
                    height="9"
                    rx="1"
                    width="7"
                    x="14"
                    y="12"
                  />
                  <rect
                    height="5"
                    rx="1"
                    width="7"
                    x="3"
                    y="16"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Dashboard
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="User Management"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/users"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-users h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <path
                    d="M16 3.128a4 4 0 0 1 0 7.744"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  User Management
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Settings"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/settings"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-settings h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Settings
                </span>
              </a>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      data-testid="sidebar-footer"
    />
    <div
      data-testid="sidebar-rail"
    />
  </div>
  <div
    data-testid="sidebar-inset"
  />
</div>
`;

exports[`AppSidebar > matches snapshot for non-admin user 1`] = `
<div>
  <div
    class="top-0 h-screen z-50 bg-[#0B1320]/95 backdrop-blur"
    collapsible="icon"
    data-testid="sidebar"
  >
    <div
      data-testid="sidebar-content"
    >
      <div
        data-testid="sidebar-group"
      >
        <ul
          data-testid="sidebar-menu"
        >
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="true"
              data-testid="sidebar-menu-button"
              title="Home"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Home
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Browse Stocks"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/browse"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trending-up h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 7h6v6"
                  />
                  <path
                    d="m22 7-8.5 8.5-5-5L2 17"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Browse Stocks
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Cryptocurrency"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/crypto"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-bitcoin h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.767 19.089c4.924.868 6.14-6.025 1.216-6.894m-1.216 6.894L5.86 18.047m5.908 1.042-.347 1.97m1.563-8.864c4.924.869 6.14-6.025 1.215-6.893m-1.215 6.893-3.94-.694m5.155-6.2L8.29 4.26m5.908 1.042.348-1.97M7.48 20.364l3.126-17.727"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Cryptocurrency
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Data Explorer"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/explorer"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Data Explorer
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Custom Analysis"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/custom"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calculator h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="2"
                    width="16"
                    x="4"
                    y="2"
                  />
                  <line
                    x1="8"
                    x2="16"
                    y1="6"
                    y2="6"
                  />
                  <line
                    x1="16"
                    x2="16"
                    y1="14"
                    y2="18"
                  />
                  <path
                    d="M16 10h.01"
                  />
                  <path
                    d="M12 10h.01"
                  />
                  <path
                    d="M8 10h.01"
                  />
                  <path
                    d="M12 14h.01"
                  />
                  <path
                    d="M8 14h.01"
                  />
                  <path
                    d="M12 18h.01"
                  />
                  <path
                    d="M8 18h.01"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Custom Analysis
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Dashboard"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/displays"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-layout-dashboard h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="9"
                    rx="1"
                    width="7"
                    x="3"
                    y="3"
                  />
                  <rect
                    height="5"
                    rx="1"
                    width="7"
                    x="14"
                    y="3"
                  />
                  <rect
                    height="9"
                    rx="1"
                    width="7"
                    x="14"
                    y="12"
                  />
                  <rect
                    height="5"
                    rx="1"
                    width="7"
                    x="3"
                    y="16"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Dashboard
                </span>
              </a>
            </button>
          </li>
          <li
            data-testid="sidebar-menu-item"
          >
            <button
              class="
                      group-data-[collapsible=icon]/sidebar:justify-center
                      group-data-[collapsible=icon]/sidebar:px-0
                    "
              data-active="false"
              data-testid="sidebar-menu-button"
              title="Settings"
            >
              <a
                class="flex w-full items-center gap-2"
                href="/settings"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-settings h-5 w-5 shrink-0"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
                <span
                  class="truncate group-data-[collapsible=icon]/sidebar:hidden"
                >
                  Settings
                </span>
              </a>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      data-testid="sidebar-footer"
    />
    <div
      data-testid="sidebar-rail"
    />
  </div>
  <div
    data-testid="sidebar-inset"
  />
</div>
`;
